--- a/package.json
+++ b/package.json
@@ -8,9 +8,11 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@prisma/client": "5.9.1",
+    "@prisma/client": "^5.12.1",
     "http-auth": "4.2.0",
-    "prisma": "5.9.1",
     "pug": "3.0.2"
+  },
+  "devDependencies": {
+    "prisma": "^5.12.1"
   }
 }
